--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: swiggy-app
-        image: preetz/swiggy-clone:latest
+        image: preetz1303/swiggy-clone:latest
         imagePullPolicy: "Always"
         ports:
         - containerPort: 3000
