--- a/Kubernetes/service.yml
+++ b/Kubernetes/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: swiggy-app
+  name: swiggy-apps
   labels:
-    app: swiggy-app
+    app: swiggy-apps
 spec:
   type: LoadBalancer
   ports:
   - port: 80
     targetPort: 3000
   selector:
-    app: swiggy-app
+    app: swiggy-apps
